[package]
name = "ndproxy"
version = "0.4.1-dev"
authors = ["Zhang Zongyu <zongyu@novazy.net>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/6-6-6/ndproxy"
homepage = "https://github.com/6-6-6/ndproxy"
description = "Proxying Neighbor Discovery packets among interfaces."
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
categories = ["command-line-utilities"]

[dependencies]
address_translation = "0.1.2"
classic_bpf = "0.1.1"
config = { version = "0.14.0", features = ["toml"], default-features = false }
futures = "0.3.30"
getset = "0.1.2"
ipnet = "2.9.0"
libc = "0.2.155"
log = { version = "0.4.22", features = ["release_max_level_info"] }
pnet = "0.35.0"
pretty_env_logger = "0.5.0"
# follow the version of tokio/net
socket2 = { version = "0.5.7", features = ["all"] }
tokio = { version = "1.39.1", default-features = false, features = ["net", "sync", "rt", "macros"] }
ip_network_table-deps-treebitmap = "0.5.0"
r-cache = "0.5.0"
thiserror = "1.0.63"
clap = { version = "4.5.11", features = ["derive"] }

[features]
dev = []

[badges]
maintenance = { status = "passively-maintained" }

[profile.release]
codegen-units = 1
lto = "fat"
